# CMakeList.txt : CMake project for cpp-app-1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("cpp-app-1")

# Add source to this project's executable.
add_executable (cpp-app-1 "cpp-app-1.cpp" "cpp-app-1.h")

# TODO: Add tests and install targets if needed.
